refactoring names, eg bomberManWrapper to playerSprites; fixed bug in Brave where bottom of winner outroText was cut off if you kept scrolling up while it appeared

--- a/styles.css
+++ b/styles.css
@@ -892,7 +892,7 @@ img {
   background-size: var(--spritesheet-size);
 }
 
-.bomber-man {
+.bomberman {
   height: var(--cell-height);
   width: var(--cell-width);
   background-size: var(--player-spritesheet-size);
